# ImageSending

ImageReceive/: ImageReceive.sln
ImageReceive/ImageReceive/: CVWindow.cpp  ImageReceive.cpp  ImageReceive.vcxproj  ImageReceive.vcxproj.filters  ReadMe.txt
PicoloConsole/: PicoloConsole.sln
PicoloConsole/PicoloConsole/: ImagePacket.h  PicoloConsole.cpp  PicoloConsole.vcxproj  PicoloConsole.vcxproj.filters  PicoloRead.cpp  PicoloRead.h  ReadMe.txt  stdafx.cpp
PicoloRead/PicoloRead/: ImagePacket.h  ImageServer.cpp  ImageServer.h  PicoloImageRead.cpp  PicoloImageRead.h  PicoloImageServer.cpp  PicoloImageServer.h  PicoloRead.cpp  PicoloRead.vcxproj
PicoloWindowsImageServer/: PicoloWindowsImageServer.sln  README.md
PicoloWindowsImageServer/PicoloRead/: ImagePacket.h  ImageServer.cpp  PicoloImageRead.cpp  PicoloImageRead.h  PicoloImageServer.cpp  PicoloImageServer.h  PicoloRead.cpp  PicoloRead.vcxproj  PicoloRead.vcxproj.filters  PreciseClock.cpp  PreciseClock.h  RandomGenerator.h  ReadMe.txt  RunPicoloImageServer.cpp  SerializeHelper.h
PicoloWindowsImageServer_new/: BoostLibrary.props  MultiCam.props  OpenCVDebug.props  OpenCVRelease.props  PicoloWindowsImageServer.sln
PicoloWindowsImageServer_new/PicoloImageRecorder/: PicoloImageRecorder.vcxproj  PicoloImageRecorder.vcxproj.filters  ReadMe.txt  RunPicoloImageRecorder.cpp  stdafx.cpp
PicoloWindowsImageServer_new/PicoloImageServer/: PicoloImageServer.vcxproj  RunPicoloImageServer.cpp  (+1 more)
RecvTestUbuntu/: CMakeLists.txt  CVWindow.h  ImagePacket.h  main.cpp
picolo_image_client/: CMakeLists.txt  package.xml
(+19 files in other folders)
